--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/photoshareappv3?useSSL=f
 spring.datasource.username= postgres
 spring.datasource.password= 1234
 spring.jpa.show-sql=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
