Refactor, added getters and setters via Lombok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,13 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/photoshareappv3?useSSL=false
-spring.datasource.username= postgres
-spring.datasource.password= 1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/photoshareappv3?useSSL=false
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
-
+spring.jpa.hibernate.ddl-auto=update
 # App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+photoShareApp.app.jwtSecret=SecretKey
+photoShareApp.app.jwtExpirationMs=86400000
